# gamelibs-gloam

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  generate.sh  meson.build
include/gloam/: egl.h  gl.h  glx.h  vk.h  wgl.h
msvc/: gloam.vcxproj  gloam.vcxproj.filters
src/: egl.c  gl.c  glx.c  vk.c  wgl.c
